# web-scraper

./: README.md  setup.cfg
src/: scrape_3gpp_specs.py
