[metadata]
author = forky2
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description = Mirror tools for miscellaneous website scraping
long_description = file:README.md
long_description_content_type = text/markdown
name = web-scraper
project_urls =
    Source Code = https://github.com/MissingCables/web-scraper
url = https://github.com/MissingCables/web-scraper
version = 0.0.1dev1

[options]
install_requires =
    beautifulsoup4
    requests
package_dir =
    =src
packages = find:
python_requires = >=3.8

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    scrape-3gpp-specs = 3gpp.scrape_specs:main
